add: install go deps at workflow
Signed-off-by: Kazım SARIKAYA <kazimsarikaya@sanaldiyar.com>

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -50,6 +50,11 @@ jobs:
           var Static embed.FS
           EOF
 
+      - name: Install dependencies (backend)
+        run: |
+          go mod tidy
+          go mod vendor
+
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v7.0.0
         with:
