feat: add Kubernetes deployment configurations for Keycloak

--- a/deploy/k8s/keycloak/deployment.yaml
+++ b/deploy/k8s/keycloak/deployment.yaml
@@ -1,3 +1,5 @@
+# Keycloak SSO deployment configuration
+# This deployment sets up Keycloak as the SSO provider for the application
 apiVersion: apps/v1
 kind: Deployment
 metadata:
