--- a/deploy/k8s/minio/deployment.yaml
+++ b/deploy/k8s/minio/deployment.yaml
@@ -1,3 +1,5 @@
+# Minio object storage deployment configuration
+# This deployment sets up Minio as the object storage provider for the application
 apiVersion: apps/v1
 kind: Deployment
 metadata:
