--- a/deploy/k8s/nexus/deployment.yaml
+++ b/deploy/k8s/nexus/deployment.yaml
@@ -1,3 +1,5 @@
+# Nexus repository deployment configuration
+# This deployment sets up Nexus as the artifact repository for the application
 apiVersion: apps/v1
 kind: Deployment
 metadata:
