--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "description": "frontend for the app",
   "main": "src/index.tsx",
   "scripts": {
+    "start": "webpack serve --mode development --open",
     "build": "webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
@@ -50,7 +51,8 @@
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
-    "webpack": "^5.99.6",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.99.7",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2"
   }
 }
