--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,8 +50,7 @@
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
-    "webpack": "^5.99.7",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.2"
+    "webpack": "^5.99.6",
+    "webpack-cli": "^5.1.4"
   }
 }
