Feature/configmap watcher (#8)
* feat: add keycloak integration

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

- Add Keycloak deployment and service configurations\n- Add Keycloak client implementation

* feat: add minio integration

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

- Add MinIO deployment and service configurations\n- Add MinIO client implementation for file storage

* add: rbac file added

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* update: deployment.yaml rbac configuration

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* feat: configmap watcher implemented

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* add: requirements added

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* update: after adding watcher.go adjustments

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* update: needed requirement added

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* add: configmap list added to frontend

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* update: token sending to backend fixed by changing function GET to POST

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* update: changes on environment variables

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* add: local test modules added

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* update: environment variables added building stage

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* add: desired CRUD functions to serve configmaps

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* fix: wrong env usage

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* fix: changes back to normal

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* remove: internal/minio/client.go deleted

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* fix: uncorrect env usage

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* update: header added to authorization

Signed-off-by: barkinrl <barkinoral.bo@gmail.com>

* fix: template yaml file changed for go tamplate (corr

--- a/deploy/k8s/app/deployment.yaml
+++ b/deploy/k8s/app/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: app
     spec:
+      serviceAccountName: app-service-account
       containers:
         - name: app
           image: app:latest
