--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,21 +1,29 @@
 name: Unit Tests
 
+permissions:
+  contents: read
+  pull-requests: write
+
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.23"
-      - name: Install dependencies
-        run: go mod tidy
-      - name: Run unit tests
-        run: go test -tags=test ./internal/...
+
+      - name: Install Ginkgo
+        run: go install github.com/onsi/ginkgo/v2/ginkgo@latest
+
+      - name: Run all tests
+        run: ./test.sh
